traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:18: error: ';' expected but 'var' found.
    } var a = 0 
      ^